--- a/.github/workflows/starter-no-infra_n278-eisss-webapp-app1.yml
+++ b/.github/workflows/starter-no-infra_n278-eisss-webapp-app1.yml
@@ -25,10 +25,14 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet tool install -g dotnet-ef --version 8.*
-        run: dotnet ef migrations bundle --runtime linux-x64 -o ${{env.DOTNET_ROOT}}/myapp/migrationsbundle
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+      - name: install dotnet-ef tool
+        run: dotnet tool install -g dotnet-ef --version 8.*
+
+      - name: bundle migrations
+        run: dotnet ef migrations bundle --runtime linux-x64 -o ${{env.DOTNET_ROOT}}/myapp/migrationsbundle
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
